Adequação de comportamento do form de Questões com Imagem. Form e código.

--- a/PI3_TBD/Telas/frmQuestaoPsq.resx
+++ b/PI3_TBD/Telas/frmQuestaoPsq.resx
@@ -342,4 +342,25 @@
         KK+5CrcpfL7fZca6sR1nW+0AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAA5FJREFUWEe1lltPE1EQx/vo3e/g9VHj1+DBt6JyVeyDqNy6u4AiNVEwYgyYiEGi
+        NiZEhLC72MQLIaHbhUDBcolKggReCIlcxKAGTIswnjndrUsZypbCP/kl3T1zZqbnMjsOu7oefHdI0tQL
+        oi4/kwLKR/Z7gRFBBF39ju9wTNSV82hrTEtdYk/7SUmXvSzIH0lXwRaauiwF1Oei1nbccJO8PCHfPjGg
+        PmQO/24IYBNBl1fYijwo7m3Za7i1pzJdOSFp8ijldDuwRD6V+d8cM9wnlhiQz7Aln6ccpYKgqXNCj3ra
+        CEOL//NdCG6CSWy6Eu6Ojv07ueybgdtBngnjwJGTUqE0oFDva4ywUUWv2vZPO0Xlh2ZQbwgQuHwJPO9f
+        rRvD27FuK/CeWw3iEbpkcDU8gby6R7aoqLkPflce9GVmgnYxFyrjEkCwaPHgpZ2th7cqMhk378LZLLct
+        SjKvQTcLjMHlgnwoflFL+hQ0eYmt/EEHllfKwIrpvFnpSEh7gxd6s7J48MfncuBqSyOIfpn0ibBzl+7g
+        tZ0YtGImkEhLU1PQnxdd9rr0bEhzXgH2fSD9xQjITx38w0INWrAm8GtsDGa7ugDW1vgzamVpCQaLi3nw
+        UHU1pKXnc3vK1zo0OYhbsEAOWrAmMFJezgPNdHbyZ9R4fT1/N+B2w9TkZMye8mUFCxMmEKEGrVgTGPX5
+        eLBgTg78npiAH0ND/LkvNxe+9vfD6upqMgmEk05gcXERQrW1POhgQQGEior472GvF8LhMLdJKgHeTBCD
+        VqwJoL5NT8OAJEX/OaO/sBDmZ2eN0aQSYFuQ5CFErbEDOM6WPuhy8QRwW/CdKbsJ8EO43WsYiUTgi98P
+        w01N8JNti1W2E8BriD0cOWiBSiCRbCegKU6z2VwmDQxMh1T1o+D22QLpywRLscffeoB/D7CBpIxMnCUV
+        sSTs4nTfIn2ZsDLcyIOjsHvFTyRliOS/boSsqirIuH3HFpmsGuIcyhcHW/ke5agRPirsXkljhqgpUPi2
+        CQp8L22BtjiH8oWIunrPCPtf2Iazwc/xxjsNu/sjHr93jxF2vbBLweJATdwJhIA8U9bddsQIRwtb591I
+        AoOXdsunjDCJxVeCda+Uo+2Ay77lP48Xts5sck2i27El7LTjgdt0z+0IVwPLNRYOMggB7/fYPd9w1VIR
+        NpDYw2H9xo8InhNG2GAO30XHFGeswm0ph+Mfw0Fuarlh5SAAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
